Fixed the spaces on mobile-carousel of clients section

--- a/src/app/components/master/master.component.css
+++ b/src/app/components/master/master.component.css
@@ -211,6 +211,9 @@
 
 }
 
+.carousel-custom-container {
+    padding: 0
+}
 
 .about-us-text {
     color: black;
